--- a/memory_game/style.css
+++ b/memory_game/style.css
@@ -4,10 +4,13 @@ body {
   text-align: center;
   margin: 0;
 }
+*/
 header {
   background-color: #F15B31;
   padding: 30px 20px 30px 20px;
+  text-align: center;
 }
+/*
 nav {
   background-color: #00A6B3;
   padding: 20px 0px 20px 0px;
@@ -63,6 +66,8 @@ main {
 img {
   margin: 40px 8px 0 8px;
 }
+/*
+*/
 footer {
   text-transform: uppercase;
   padding: 0 20px;
@@ -72,6 +77,7 @@ footer {
   letter-spacing: .08em;
   font-weight: 500;
 }
+/*
 .copyright{
   float: left;
   font-family: "Raleway", sans-serif;
@@ -92,4 +98,4 @@ footer {
   color: #F15B31;
   font-weight: 700;
 }
-/*
+*/
