--- a/memory_game/style.css
+++ b/memory_game/style.css
@@ -63,14 +63,15 @@ main {
      margin-left: auto;
      margin-right: auto;
 }
+*/
 img {
-  margin: 40px 8px 0 8px;
+  margin: 20px 20px 20px 20px;
+  padding: 40px 40px 40px 40px;
 }
 /*
 */
 footer {
   text-transform: uppercase;
-  padding: 0 20px;
   background-color: #0D2C40;
   color: white;
   font-size: 14px;
@@ -99,3 +100,4 @@ footer {
   font-weight: 700;
 }
 */
+
